@@ -2,6 +2,13 @@
 
 	Merged from trunk:
 
+	* gtk/gtktreeview.c: Use gtk-doc syntax to refer to properties in
+	the docstrings.
+
+2009-01-26  Claudio Saavedra  <csaavedra@igalia.com>
+
+	Merged from trunk:
+
 	Bug 559420 – gtk_icon_view_enable_model_drag_[source|dest] docs
 	wrt. reorderable property
 
